--- a/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,40 +13,40 @@
 
 <StackPane fx:id="container" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.AddEditClassTimeController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="425.0">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="425.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="Select Course" />
             <Label layoutX="14.0" layoutY="68.0" text="Select Section" />
-            <Button fx:id="btnAdd" layoutX="126.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
-            <Button fx:id="btnCancel" layoutX="230.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
-            <Label fx:id="lblClassTime" layoutX="14.0" layoutY="309.0" text="Class Time" />
-            <JFXTimePicker fx:id="timePickFrom" layoutX="13.0" layoutY="343.0" />
-            <JFXTimePicker fx:id="timePickTo" layoutX="232.0" layoutY="343.0" />
-            <Label fx:id="lblFrom" layoutX="16.0" layoutY="326.0" text="From:" />
-            <Label fx:id="lblTo" layoutX="232.0" layoutY="326.0" text="To:" />
+            <Button fx:id="btnAdd" layoutX="122.0" layoutY="363.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
+            <Button fx:id="btnCancel" layoutX="226.0" layoutY="363.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
+            <Label fx:id="lblClassTime" layoutX="14.0" layoutY="271.0" text="Class Time" />
+            <JFXTimePicker fx:id="timePickFrom" layoutX="13.0" layoutY="305.0" />
+            <JFXTimePicker fx:id="timePickTo" layoutX="232.0" layoutY="305.0" />
+            <Label fx:id="lblFrom" layoutX="16.0" layoutY="288.0" text="From:" />
+            <Label fx:id="lblTo" layoutX="232.0" layoutY="288.0" text="To:" />
             <ComboBox fx:id="cmbCourse" layoutX="11.0" layoutY="32.0" prefHeight="25.0" prefWidth="400.0" />
             <ComboBox fx:id="cmbSection" layoutX="11.0" layoutY="85.0" prefHeight="25.0" prefWidth="200.0" />
-            <Separator layoutX="-1.0" layoutY="452.0" prefHeight="1.0" prefWidth="425.0" />
-            <Label layoutX="13.0" layoutY="460.0" text="UNB Format" />
-            <TextField layoutX="10.0" layoutY="480.0" prefHeight="25.0" prefWidth="400.0" />
-            <Button layoutX="180.0" layoutY="520.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+            <Separator layoutX="-1.0" layoutY="401.0" prefHeight="1.0" prefWidth="425.0" />
+            <Label layoutX="13.0" layoutY="409.0" text="UNB Format" />
+            <TextField layoutX="10.0" layoutY="429.0" prefHeight="25.0" prefWidth="400.0" />
+            <Button layoutX="180.0" layoutY="469.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
             <Label layoutX="14.0" layoutY="122.0" text="Week Day:" />
-            <CheckBox fx:id="chkSun" layoutX="15.0" layoutY="148.0" mnemonicParsing="false" text="Sunday" />
-            <CheckBox fx:id="chkMon" layoutX="15.0" layoutY="169.0" mnemonicParsing="false" text="Monday" />
-            <CheckBox fx:id="chkTue" layoutX="15.0" layoutY="190.0" mnemonicParsing="false" text="Tuesday" />
-            <CheckBox fx:id="chkWed" layoutX="15.0" layoutY="212.0" mnemonicParsing="false" text="Wednesday" />
-            <CheckBox fx:id="chkThu" layoutX="15.0" layoutY="234.0" mnemonicParsing="false" text="Thursday" />
-            <CheckBox fx:id="chkFri" layoutX="15.0" layoutY="255.0" mnemonicParsing="false" text="Friday" />
-            <CheckBox fx:id="chkSat" layoutX="16.0" layoutY="277.0" mnemonicParsing="false" text="Saturday" />
-            <Label layoutX="218.0" layoutY="122.0" text="Type:" />
-            <CheckBox fx:id="chkLec" layoutX="227.0" layoutY="155.0" mnemonicParsing="false" text="Lecture" />
-            <CheckBox fx:id="chkLab" layoutX="227.0" layoutY="177.0" mnemonicParsing="false" text="Laboratory" />
-            <CheckBox fx:id="chkTut" layoutX="227.0" layoutY="198.0" mnemonicParsing="false" text="Tutorial" />
-            <CheckBox fx:id="chkOth" layoutX="227.0" layoutY="219.0" mnemonicParsing="false" text="Other" />
+            <CheckBox fx:id="chkSun" layoutX="94.0" layoutY="174.0" mnemonicParsing="false" text="Sunday" />
+            <CheckBox fx:id="chkMon" layoutX="14.0" layoutY="148.0" mnemonicParsing="false" text="Monday" />
+            <CheckBox fx:id="chkTue" layoutX="94.0" layoutY="148.0" mnemonicParsing="false" prefHeight="3.0" prefWidth="65.0" text="Tuesday" />
+            <CheckBox fx:id="chkWed" layoutX="172.0" layoutY="148.0" mnemonicParsing="false" text="Wednesday" />
+            <CheckBox fx:id="chkThu" layoutX="269.0" layoutY="148.0" mnemonicParsing="false" text="Thursday" />
+            <CheckBox fx:id="chkFri" layoutX="354.0" layoutY="148.0" mnemonicParsing="false" text="Friday" />
+            <CheckBox fx:id="chkSat" layoutX="13.0" layoutY="174.0" mnemonicParsing="false" text="Saturday" />
+            <Label layoutX="14.0" layoutY="206.0" text="Type:" />
             <Separator layoutX="-1.0" layoutY="120.0" prefHeight="1.0" prefWidth="425.0" />
-            <Separator layoutX="-1.0" layoutY="304.0" prefHeight="1.0" prefWidth="425.0" />
-            <Separator layoutX="213.0" layoutY="120.0" orientation="VERTICAL" prefHeight="185.0" prefWidth="3.0" />
-            <Separator layoutY="392.0" prefHeight="1.0" prefWidth="425.0" />
+            <Separator layoutX="1.0" layoutY="265.0" prefHeight="1.0" prefWidth="425.0" />
+            <Separator layoutY="347.0" prefHeight="1.0" prefWidth="425.0" />
+            <RadioButton fx:id="rbtnLec" layoutX="13.0" layoutY="234.0" mnemonicParsing="false" text="Lecture" />
+            <RadioButton fx:id="rbtnLab" layoutX="111.0" layoutY="234.0" mnemonicParsing="false" text="Laboratory" />
+            <RadioButton fx:id="rbtnTut" layoutX="229.0" layoutY="234.0" mnemonicParsing="false" text="Tutorial" />
+            <RadioButton fx:id="rbtnOth" layoutX="331.0" layoutY="234.0" mnemonicParsing="false" text="Other" />
+            <Separator layoutX="-2.0" layoutY="201.0" prefHeight="1.0" prefWidth="425.0" />
          </children>
       </AnchorPane>
    </children>
