--- a/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
@@ -16,38 +16,38 @@
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="425.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="Select Course" />
-            <Label layoutX="14.0" layoutY="68.0" text="Select Section" />
-            <Button fx:id="btnAdd" layoutX="127.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
-            <Button fx:id="btnCancel" layoutX="222.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" text="Cancel" />
-            <Label fx:id="lblClassTime" layoutX="14.0" layoutY="269.0" text="Class Time" />
-            <Label fx:id="lblFrom" layoutX="16.0" layoutY="297.0" text="From" />
-            <Label fx:id="lblTo" layoutX="234.0" layoutY="296.0" text="To" />
             <ComboBox fx:id="cmbCourse" layoutX="11.0" layoutY="32.0" prefHeight="25.0" prefWidth="400.0" />
+            <Label layoutX="14.0" layoutY="68.0" text="Select Section" />
             <ComboBox fx:id="cmbSection" layoutX="11.0" layoutY="85.0" prefHeight="25.0" prefWidth="200.0" />
-            <Separator layoutX="-1.0" layoutY="401.0" prefHeight="1.0" prefWidth="425.0" />
-            <Label layoutX="13.0" layoutY="409.0" text="UNB Format" />
-            <TextField layoutX="10.0" layoutY="429.0" prefHeight="25.0" prefWidth="400.0" />
-            <Button layoutX="180.0" layoutY="469.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
             <Label layoutX="14.0" layoutY="122.0" text="Week Day:" />
-            <CheckBox fx:id="chkSun" layoutX="94.0" layoutY="174.0" mnemonicParsing="false" text="Sunday" />
             <CheckBox fx:id="chkMon" layoutX="14.0" layoutY="148.0" mnemonicParsing="false" text="Monday" />
             <CheckBox fx:id="chkTue" layoutX="94.0" layoutY="148.0" mnemonicParsing="false" prefHeight="3.0" prefWidth="65.0" text="Tuesday" />
             <CheckBox fx:id="chkWed" layoutX="172.0" layoutY="148.0" mnemonicParsing="false" text="Wednesday" />
             <CheckBox fx:id="chkThu" layoutX="269.0" layoutY="148.0" mnemonicParsing="false" text="Thursday" />
             <CheckBox fx:id="chkFri" layoutX="354.0" layoutY="148.0" mnemonicParsing="false" text="Friday" />
             <CheckBox fx:id="chkSat" layoutX="13.0" layoutY="174.0" mnemonicParsing="false" text="Saturday" />
+            <CheckBox fx:id="chkSun" layoutX="94.0" layoutY="174.0" mnemonicParsing="false" text="Sunday" />
             <Label layoutX="14.0" layoutY="206.0" text="Type:" />
-            <Separator layoutX="-1.0" layoutY="120.0" prefHeight="1.0" prefWidth="425.0" />
-            <Separator layoutX="1.0" layoutY="265.0" prefHeight="1.0" prefWidth="425.0" />
-            <Separator layoutY="351.0" prefHeight="1.0" prefWidth="425.0" />
             <RadioButton fx:id="rbtnLec" layoutX="13.0" layoutY="234.0" mnemonicParsing="false" text="Lecture" />
             <RadioButton fx:id="rbtnLab" layoutX="111.0" layoutY="234.0" mnemonicParsing="false" text="Laboratory" />
             <RadioButton fx:id="rbtnTut" layoutX="229.0" layoutY="234.0" mnemonicParsing="false" text="Tutorial" />
             <RadioButton fx:id="rbtnOth" layoutX="331.0" layoutY="234.0" mnemonicParsing="false" text="Other" />
-            <Separator layoutX="-2.0" layoutY="201.0" prefHeight="1.0" prefWidth="425.0" />
-            <Spinner fx:id="spinnerEnd" layoutX="256.0" layoutY="293.0" />
+            <Label fx:id="lblClassTime" layoutX="14.0" layoutY="269.0" text="Class Time" />
+            <Label fx:id="lblFrom" layoutX="16.0" layoutY="297.0" text="Start" />
             <Spinner fx:id="spinnerStart" layoutX="52.0" layoutY="293.0" />
+            <Label fx:id="lblTo" layoutX="234.0" layoutY="296.0" text="End" />
+            <Spinner fx:id="spinnerEnd" layoutX="256.0" layoutY="293.0" />
             <Label fx:id="lblTimeError" layoutX="15.0" layoutY="325.0" />
+            <Button fx:id="btnAdd" layoutX="127.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+            <Button fx:id="btnCancel" layoutX="222.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" text="Cancel" />
+            <Separator layoutX="-1.0" layoutY="401.0" prefHeight="1.0" prefWidth="425.0" />
+            <Label layoutX="13.0" layoutY="409.0" text="UNB Format" />
+            <TextField layoutX="10.0" layoutY="429.0" prefHeight="25.0" prefWidth="400.0" />
+            <Button layoutX="180.0" layoutY="469.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+            <Separator layoutX="-1.0" layoutY="120.0" prefHeight="1.0" prefWidth="425.0" />
+            <Separator layoutX="1.0" layoutY="265.0" prefHeight="1.0" prefWidth="425.0" />
+            <Separator layoutY="351.0" prefHeight="1.0" prefWidth="425.0" />
+            <Separator layoutX="-2.0" layoutY="201.0" prefHeight="1.0" prefWidth="425.0" />
          </children>
       </AnchorPane>
    </children>
