--- a/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
+++ b/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
@@ -18,7 +18,7 @@
       <menus>
         <Menu mnemonicParsing="false" text="_File">
           <items>
-            <MenuItem mnemonicParsing="false" text="Save As…" />
+            <MenuItem mnemonicParsing="false" onAction="#saveAs" text="Save As…" />
             <MenuItem mnemonicParsing="false" onAction="#selectFile" text="Open…" />
             <Menu mnemonicParsing="false" text="Open Recent" />
                   <SeparatorMenuItem mnemonicParsing="false" />
